app/assets/css/style.css
* {
  margin: 0;
  padding: 0;
}

html, body {
  height: 100%;
  min-height: 765px;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 14px;
  line-height: 1.42857143;
  color: #c8c8c8;
  background-color: #333337;
}

#app, #app > div {
  overflow: hidden;
  height: 100%;
  width: 100%;
}

#app > div {
  position: relative;
}

.primary-pane {
  position: absolute;
  padding-top: 20px;
  height: 100%;
  width: 100%;
  display: inline-block;
  transition: all .2s ease;
}

.side-pane {
  position: absolute;
  right: -25%;
  height: 100%;
  width: 25%;
  display: inline-block;
  background: linear-gradient(#484e55, #3a3f44 60%, #313539);
  border-radius: 4px 0 0 4px;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.3);*/
  transition: all .2s ease;
}

.tweets {
  overflow: auto;
  height: 100%;
  font-family: Helvetica, sans-serif;
  /*background: linear-gradient(#484e55, #3a3f44 60%, #313539);*/
  background: #484e55;
  /*-webkit-backface-visibility: hidden;*/
}


.tabs * {
  box-sizing: border-box;
  position: absolute;
  background: #484e55;
  border-radius: 4px 0 0 4px;
  cursor: pointer;
}

.tabs > * {
  border-right: 1px solid #333337;
}


.side-pane .clicktab {
  left: -46px;
  height: 46px;
  width: 46px;
}

.side-pane .sentiment-filter-pos {
  left: -25px;
  top: 47px;
  height: 24px;
  width: 24px;
}

.side-pane .sentiment-filter-neg {
  left: -25px;
  top: 76px;
  height: 24px;
  width: 24px;
}

.side-pane .active {
}

i.fa.fa-twitter {
  font-size: 36px;
  padding: 5px;
}

i.fa.fa-minus-circle {
  font-size: 24px;
  padding: 2px;
}

i.fa.fa-plus-circle {
  font-size: 24px;
  padding: 2px;
}

i.fa.active {
  color:black;
}

div.tweet:nth-child(1) {
  border-radius: 0 0 0 4px;
}

.arbitrary {
  position: relative;
  height: 100%;
  width: 100%;
}

.arbitrary > div {
  margin: 20px auto;
  width: 80%;
  text-align: center;
  /*background: linear-gradient(#484e55, #3a3f44 60%, #313539);*/
  /*border: 1px solid rgba(0,0,0,0.6);*/
  /*border-radius: 4px;*/
}

.header, .navbar {
  height: 75px;
}

.footer {
  height: 85px;
}

.legend {
  width: 50%;
}

.legend ul {
  display: inline-block;
  list-style: none;
  text-align: left;
}

.legend li {
  font-size: 15pt;
}

.legend li div {
  display: inline-block;
  height: 15px;
  width: 15px;
}

.legend .neutral div {
  background-color: rgba(220,220,220,1);
}

.legend .negative div {
  background-color: rgba(255,51,51,1);
}

.legend .positive div {
  background-color: rgba(0,204,102,1);
}

.navbar ul {
  width: 100%;
  list-style: none;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

.navbar ul li {
  width: 50%;
  display: inline-block;
  /*padding: 0px 25px;*/
  font-size: 36px;
}

.navbar ul li span {
  cursor: pointer;
}

.navbar ul li span:hover {
  color: #f2f2f2;
}

.footer {
  position: absolute;
  bottom: 60px;
  left: 0;
  right: 0;
}

form {
  height: inherit;
}

input {
  outline: none;
}

input[type=search],
input[type=number] {
  -webkit-appearance: textfield;
  -webkit-box-sizing: content-box;
  font-family: inherit;
  font-size: 100%;
}

input::-webkit-search-decoration,
input::-webkit-search-cancel-button {
  display: none; 
}

input[type=search] {
  background: #ededed url(../images/search-icon.png) no-repeat 9px center;
  width: 140px;
}

input[type=number] {
  width: 70px;
  margin-left: 10px;
}

input[type=search],
input[type=number] {
  border: solid 1px #ccc;
  padding: 9px 10px 9px 32px;
  
  -webkit-border-radius: 10em;
  -moz-border-radius: 10em;
  border-radius: 10em;
  
  -webkit-transition: all .5s;
  -moz-transition: all .5s;
  transition: all .5s;

  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

input[type=search]:focus {
  width: 200px;
}


input[type=search]:focus,
input[type=number]:focus {
  background-color: #fff;
  border-color: #66CC75;
  
  -webkit-box-shadow: 0 0 5px rgba(109,207,246,.5);
  -moz-box-shadow: 0 0 5px rgba(109,207,246,.5);
  box-shadow: 0 0 5px rgba(109,207,246,.5);
}

input[type="submit"] {
  position: relative;
  top: 25%;
  margin-left:10px;
}

input[type="radio"] {
  position:relative;
  top:25%;
  margin-left:10px;
}

.radio_buttons {
  display:inline-block;
  position:relative;
  top:25%;
}

.content {
  position: absolute;
  top: 170px;
  bottom: 185px;
  left: 0;
  right: 0;
  height: auto;
  min-height: 400px;
}

.content > div {
  position: absolute;
  height: 100%;
  width: 100%;
}

.content > div.hidden {
  visibility: hidden;
}

.map-holder {
  position: relative;
  height: 100%;
}

#map {
  height: 100%;
}

.no-tweet {
  margin: 10px 0;
  padding: 20px 0;
  text-align: center;
}

.tweet {
  background: linear-gradient(#484e55, #3a3f44 60%, #313539);
  border: 1px solid rgba(0,0,0,0.6);
  border-radius: 4px 0 0 4px;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
  padding: 5%;
}

.tweet.sentiment-negative {
  background: #9C2E2E;
}

.tweet.sentiment-positive {
  background: #446744;
}

p.tweet-user {
  float:left;
  font-weight:500;
  color:white;
  margin-bottom: 5px;
}

p.tweet-text {
  clear:both;
  font-size:small;
  font-weight:100;
}

p.tweet-time {
  font-size:smaller;
  float: right;
}

p.tweet-time a {
  color:white;
  text-decoration: none;
}

@media (max-width: 480px) {
  .primary-pane.sideshow {
    transform: translateX(-100%);
  }

  .side-pane.sideshow {
    right: 0;
    width: 100%;
  }
}

@media (min-width: 481px) and (max-width: 624px) {
  .primary-pane.sideshow {
    transform: translateX(-75%);
  }

  .side-pane.sideshow {
    right: 0;
    width: 75%;
  }
}

@media (min-width: 625px) and (max-width: 767px) {
  .primary-pane.sideshow {
    transform: translateX(-50%);
  }

  .side-pane.sideshow {
    right: 0;
    width: 50%;
  }
}

@media (max-width: 480px) {
  .primary-pane.sideshow {
    transform: translateX(-100%);
  }

  .side-pane.sideshow {
    right: 0;
    width: 100%;
  }
}

@media (min-width: 481px) and (max-width: 624px) {
  .primary-pane.sideshow {
    transform: translateX(-75%);
  }

  .side-pane.sideshow {
    right: 0;
    width: 75%;
  }
}

@media (min-width: 625px) and (max-width: 767px) {
  .primary-pane.sideshow {
    transform: translateX(-50%);
  }

  .side-pane.sideshow {
    right: 0;
    width: 50%;
  }
}

@media (min-width: 768px) and (max-width: 979px) {
  .primary-pane.sideshow {
    transform: translateX(-35%);
  }

  .side-pane.sideshow {
    right: 0;
    width: 35%;
  }
}

@media (min-width: 980px) {
  .primary-pane.sideshow {
    width: 75%;
  }

  .side-pane.sideshow {
    right: 0;
  }
}

.chart > div {
  position: absolute;
  left: 20px;
  right: 20px;
}

.canvas-holder {
  top: 20px;
  bottom: 0;
}

.chart-legend {
  bottom: 20px;
}

canvas {
  height: 100%;
  width: 100%;
}

span.search_result {
  color: tan;
}


/* Dot loading animation lifted from https://jsfiddle.net/DkcD4/94/ */

.one {
    opacity: 0;
    -webkit-animation: dot 1.3s infinite;
    -webkit-animation-delay: 0.0s;
    animation: dot 1.3s infinite;
    animation-delay: 0.0s;
}

.two {
    opacity: 0;
    -webkit-animation: dot 1.3s infinite;
    -webkit-animation-delay: 0.2s;
      animation: dot 1.3s infinite;
      animation-delay: 0.2s;
}

.three {
    opacity: 0;
    -webkit-animation: dot 1.3s infinite;
    -webkit-animation-delay: 0.3s;
     animation: dot 1.3s infinite;
     animation-delay: 0.3s;
}

@-webkit-keyframes dot {
      0% { opacity: 0; }
     50% { opacity: 0; }
    100% { opacity: 1; }
}

@keyframes dot {
      0% { opacity: 0; }
     50% { opacity: 0; }
    100% { opacity: 1; }
}

